Exm02 commit final, adiciona funcionalidade Editar

--- a/exm02/src/main/resources/application.properties
+++ b/exm02/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:derby:database/teste.db;create=true
 spring.jpa.defer-datasource=derby
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
